force-app/main/default/objects/ProjectServiceEquipment__c/ProjectServiceEquipment__c.object-meta.xml
<CustomObject>
    <description>Relates Equipment to a Project Service. Equipment from Retailer Service Equipment is added by default when a Service is added to a Project Service. Additional Equipment can also be added to the project. Project Service Equipment is related to Project Service and Equipment.</description>
    <label>Project Service Equipment</label>
    <nameField>
        <displayFormat>PSE-{0000000}</displayFormat>
        <label>Project Service Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>