force-app/main/default/objects/ProjectServiceEquipment__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Project Service Equipment</relationshipLabel>
    <relationshipName>ProjectServiceEquipment</relationshipName>
    <type>Lookup</type>
</CustomField>