force-app/main/default/objects/ProjectServiceEquipment__c/fields/EquipmentName__c.field-meta.xml
<CustomField>
    <fullName>EquipmentName__c</fullName>
    <formula>Equipment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Name</label>
    <type>Text</type>
</CustomField>