force-app/main/default/objects/ProjectServiceEquipment__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record cannot be deleted.</description>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>