force-app/main/default/objects/ProjectServiceEquipment__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Prevents duplicate rows. Used by workflow rule field update.</description>
    <label>Unique Key</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>