force-app/main/default/objects/ProjectServiceEquipment__c/validationRules/Quantity_not_equal_to_zero_or_gt_99999.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_not_equal_to_zero_or_gt_99999</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0  || Quantity__c &gt; 99999</errorConditionFormula>
    <errorMessage>Quantity cannot be less that or equal to zero (0) or greater than 99999.</errorMessage>
</ValidationRule>